src/styles/pianoroll.scss
$pianoroll-corner:             4px;
$pianoroll-timeline:          50px;
$pianoroll-spacing:           15px;
$pianoroll-keyboard-width:   125px;
$pianoroll-scroll-horizontal: 20px;
$pianoroll-scroll-vertical: 20px;

// ----------------------------------------------------------------------------
// Piano Roll
// ----------------------------------------------------------------------------
.pianoroll {
  position: absolute;
  top: 15px;
  left: 15px;
  right: 15px;
  bottom: 15px;

  > .timeline-cursor-window {
    top: 1px;
    left: $pianoroll-keyboard-width;
    right: $pianoroll-scroll-vertical;
    bottom: $pianoroll-scroll-horizontal + 1px;

    > .timeline-cursor-grid {
      top:  0px;
      left: 10px - 1px;
      right: 10px + 1px;
      bottom:  0px;
    }
  }

  > .timeline-playhead-window {
    top: 20px;
    left: $pianoroll-keyboard-width;
    right: $pianoroll-scroll-vertical;
    bottom: $pianoroll-scroll-horizontal + 1px;

    > .timeline-playhead-grid {
      top:  0px;
      left: 10px - 0px;
      right: 10px + 1px;
      bottom:  0px;
    }
  }

  > .timeline-selection-window {
    top: $pianoroll-timeline;
    left: $pianoroll-keyboard-width;
    right: $pianoroll-scroll-vertical;
    bottom: $pianoroll-scroll-horizontal + 1px;

    > .timeline-selection-grid {
      top:  1px;
      left: 10px - 0px;
      right: 10px + 1px;
      bottom:  -1px;
    }
  }
}

// ----------------------------------------------------------------------------
// Timeline
// ----------------------------------------------------------------------------
.pianoroll-timeline-control {
  position: absolute;
  top: 0;
  left: $pianoroll-keyboard-width;
  right: $pianoroll-scroll-vertical;
  height: $pianoroll-timeline;

  background: none;
}
.pianoroll-timeline-display {
  position: absolute;
  top: 0;
  left: $pianoroll-keyboard-width;
  right: $pianoroll-scroll-vertical;
  height: $pianoroll-timeline;

  border: 1px solid #000;
  border-bottom: 0;
  border-radius: $pianoroll-corner $pianoroll-corner 0 0;
  background: #333;

  > canvas {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    width: 100%;

    border-radius: $pianoroll-corner $pianoroll-corner 0 0;
  //height: 100%; // For some reason, causes skewed aspect ratio in chrome Nov 10th 2015 (AK)
  }

  // Inner shadows must be applied in a pseudoelement to cast over the contents
  &::after {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;

    border-radius: $pianoroll-corner - 1px $pianoroll-corner - 1px 0 0;
    box-shadow: inset 1px  1px 3px -1px #000,
                inset -1px 1px 3px -1px #000;
    z-index: 2; // Above scroll-zone
    pointer-events: none;
  }
}

// ----------------------------------------------------------------------------
// Window - Central Editing Area
// ----------------------------------------------------------------------------
.pianoroll-window-control {
  position: absolute;
  top: $pianoroll-timeline;
  left: $pianoroll-keyboard-width;
  right: $pianoroll-scroll-vertical;
  bottom: $pianoroll-scroll-horizontal;

  background: none;
}
.pianoroll-window-display {
  position: absolute;
  top: $pianoroll-timeline;
  left: $pianoroll-keyboard-width;
  right: $pianoroll-scroll-vertical;
  bottom: $pianoroll-scroll-horizontal;

  border: 1px solid #000;
  border-radius: 0 0 $pianoroll-corner 0;
  background: #444;

  overflow: hidden;
  pointer-events: none;

  > canvas {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    width: 100%;

    border-radius: 0 0 $pianoroll-corner 0;
  //height: 100%; // For some reason, causes skewed aspect ratio in chrome Nov 10th 2015 (AK)
  }

  // Inner shadows must be applied in a pseudoelement to cast over the contents
  &::after {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;

    border-radius: 0 0 $pianoroll-corner - 1px 0;
    box-shadow: inset 0 0 5px 1px #000;
    z-index: 3; // Above scroll-zone
    pointer-events: none;
  }
}
.pianoroll-scrollbar-horizontal {
  position: absolute;
  height: $pianoroll-scroll-horizontal;
  left: 0;
  right: 0;
  bottom: -$pianoroll-scroll-horizontal;
  z-index: 2;

  padding: 10px 0 0;
}
.pianoroll-scrollbar-vertical {
  position: absolute;
  width: $pianoroll-scroll-vertical;
  top: 0;
  bottom: 0;
  right: -$pianoroll-scroll-vertical;
  z-index: 2;

  padding: 0 0 0 10px;
}

// ----------------------------------------------------------------------------
// Keyboard
// ----------------------------------------------------------------------------
.pianoroll-keyboard {
  position: absolute;
  top: $pianoroll-timeline;
  left: 0;
  width: $pianoroll-keyboard-width - 1px;
  bottom: $pianoroll-scroll-horizontal;
  box-sizing: content-box;

  border: 1px solid #000;
  border-right: 0;
  border-radius: $pianoroll-corner 0 0 $pianoroll-corner;
  z-index: 5; // Above the timeline
  background: #777;
  overflow: hidden;

  // Inner shadows must be applied in a pseudoelement to cast over the contents
  &::after {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;

    border-radius: $pianoroll-corner - 1px 0 0 $pianoroll-corner - 1px;
    box-shadow: inset 2px  3px 3px -1px rgba(0,0,0,0.64),
                inset 2px -3px 3px -1px rgba(0,0,0,0.64);
    z-index: 2; // Above keyboard
    pointer-events: none;
  }
}
.pianoroll-keybed {
  position: absolute;
  right: 0;
  height: 1047px;
  width: 104.7px;
}
$total-keys:  88.00;
$octave-keys: 12.00;
$octave-thickness: percentage($octave-keys/$total-keys);
$key-thickness: percentage(1/$octave-keys);
$key-thickness-margin: percentage(1/$total-keys * 12.5); // Used for margins, which are are calculated based off of width rather than height.
.pianoroll-key {
  display: block;
  position: relative;
  box-sizing: border-box;
  cursor: pointer;
  border-top: 0px;
  height: $key-thickness;
  width: 100%;

  &.white {
    border: 1px solid #000;
    border-right: 0;
    border-top: 0;
    background: #CCC;
    background-image: linear-gradient(90deg, #999 20%, #CCC 21%, #999 100%);
    height: 1.75*$key-thickness;   // Make white keys thicker

    display: flex;
    padding-right: 5%; 
    .pianoroll-key-label {
      visibility: hidden;
      font-size: 10px;
      color: #000;
      align-self: center;
      text-align: right;
      width: 100%;
    }

    &.active,
    &:active {
      background: #A99;
      background-image: linear-gradient(90deg, #988 16%, #CBB 17%, #988 100%);
      box-shadow: inset 0 1px 3px 2px #544;
    }
  }
  &.black {
    position: relative;
    border-radius: 0 2px 2px 0;
    border: 1px solid #222;
    border-bottom-width: 2px;
    background: #222;
    z-index: 1;  // Above the white keys
    height: $key-thickness;    // ...try to cut a pixel off of black keys to prevent asymmetry
    width: 69%;

    &:after {
      content: '';
      display: block;
      position: absolute;
      top: 0;
      right: 8%;
      bottom: 0;
      left: 20%;
      border-radius: 0 20% 20% 0;
      background: #555;
    }
    &:before {
      content: '';
      display: block;
      position: absolute;
      top: -1px;
      left: 100%;
      width: 50%;
      bottom: -2px;

      background-image: linear-gradient(left, rgba(0,0,0,0.25) 0%, transparent 50%);
    }

    // Overlap the adjacent white keys (different amounts depending on where they are on the scale)
    margin: -0.5*$key-thickness-margin 0px -0.5*$key-thickness-margin 0px;
    &.higher {
      margin: -0.75*$key-thickness-margin 0px -0.25*$key-thickness-margin 0px;
    }
    &.lower {
      margin: -0.25*$key-thickness-margin 0px -0.75*$key-thickness-margin 0px;
    }

    &.active,
    &:active {
      border-color: #200;
      border-bottom-width: 1px;
      background: #200;

      &:after {
        left: 10%;
        background: #544;
        box-shadow: inset 0 1px 3px 2px #200;
      }
    }
  }

  &.thinner {
    height: 1.5 * $key-thickness;     // Certain white keys are sandwiched slightly differently to maintain proportions
  }

  &.compact {
    .pianoroll-key-label {
      font-size: 9px;
    }

    &:last-child {
      .pianoroll-key-label {
        visibility: hidden;
      }
    }
  }

  &:last-child {
    > .pianoroll-key-label {
      visibility: visible;
    }
  }
}
.pianoroll-octave {
  position: relative;
  height: $octave-thickness;
  //width: 100px; // Fixed width will 

  &:first-child {
    height: percentage(1.0625/$total-keys);

    .pianoroll-key {
      height: 100%;
    }
  }

  &:last-child {
    .pianoroll-key {
      &:last-child {
        height: 1.250 * $key-thickness;
        border-radius: 0 0 0 3px;
        border-bottom: 1px solid #000;
      }
    }
  }

  &:hover {
    .pianoroll-key-label {
      visibility: visible !important;
    }
    .pianoroll-key {
      &.black {
        &:before {
          display: none;
        }
      }
    }
  }
}
.pianoroll-octave-label {
  position: absolute;
  top: 0px;
  bottom: 0px;
  right: 100%;
  width: 100px;

  border: 1px solid #000;
  border-top: 0;
  border-right: 0;

  font-size: 12px;
  color: #000;
  display: flex;
  > * {
    align-self: flex-end;
    width: 100%;
    padding-right: 4px;
    padding-bottom: 2px;
    text-align: right;
  }
}

